frontend/tests/cases/negative/notInScopeTyConInInstanceHead.gr
interface Simple a where
  simple : a -> a

-- type SimpleDT is not in scope
instance Simple SimpleDT where
  simple x = x
